@@ -18,6 +18,7 @@
  * Boston, MA 02111-1307, USA.
  */
 
+#include "config.h"
 #include <glib-object.h>
 #include <glib/gi18n.h>
 #include <stdlib.h>
