@@ -1,3 +1,14 @@
+2008-12-18  Bastien Nocera  <hadess@hadess.net>
+
+	* libjuicer/sj-metadata-getter.h:
+	* libjuicer/sj-metadata-gvfs.c:
+	* libjuicer/sj-metadata-musicbrainz.c:
+	* libjuicer/sj-metadata.c:
+	* libjuicer/sj-metadata.h:
+	* libjuicer/sj-structures.c:
+	* libjuicer/sj-structures.h: Single include for the copy/paste
+	files in rhythmbox
+
 2008-12-11  Claude Paroz  <claude@2xlibre.net>
 
 	* data/sound-juicer.1: Missing space before '--help-gnome'. Patch by
